Fix checkbox vertical alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -155,4 +155,12 @@ body {
     background-color: $grey;
   }
 
+  // Fix for checkboxes changing vertical alignment in cells when clicked as of Dec 28, 2017
+  // See https://github.com/angular/material2/issues/8600 & the 'Include Overflow Styling' section of
+  // https://material.angular.io/components/table/overview#selection
+  // Note checkbox column must be named "select" in table
+  .mat-column-select {
+    overflow: visible;
+  }
+
 }
